[package]
name = "irusti"
version = "0.1.0"
authors = ["ben75"]

[dependencies]
clap = "~2.31"
rust-ini = "0.11"
log = "0.4"
log4rs = "0.8.0"
rocksdb = "0.10.0"
num_cpus = "1.0"
zmq = "0.8"
linked_hash_set = { git = "https://github.com/alexheretic/linked-hash-set" }
rand="0.5"
lazy_static = "1.0"
crossbeam = "0.3"
scoped-pool = "1"
http_parser = "0.0.2"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"